# rust-raylib-hotreload-wasm-template

./: .gitignore  Cargo.toml  Makefile  README.md  raylib.js
game/: Cargo.toml  game.rs  mod.rs  sprite.rs  state.rs  texture_info.rs
src/: main.rs
